--- a/src/components/user-block/user-block.scss
+++ b/src/components/user-block/user-block.scss
@@ -1,5 +1,5 @@
 @import '../../sass/variables';
-@import '../../sass/_mixins';
+@import '../../sass/mixins';
 
 .user-block {
   display: flex;
@@ -18,6 +18,7 @@
     &:focus {
       color: $royalblue;
       text-decoration: underline;
+      outline: none;
     }
   }
 
