--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,5 @@
 @import '../../sass/variables';
+@import '../../sass/mixins';
 
 .header {
   display: flex;
@@ -10,8 +11,6 @@
 .header__container {
   display: flex;
   align-items: baseline;
-  min-width: 1170px;
-  margin: 0 auto;
   padding-top: 27px;
 }
 
