--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,4 @@
-@import './fonts';
-@import './global';
-@import './variables';
-@import './mixins';
+@import "./fonts";
+@import "./global";
+@import "./variables";
+@import "./mixins";
