style: miss semicolon

--- a/src/components/promo/promo.scss
+++ b/src/components/promo/promo.scss
@@ -29,7 +29,7 @@
   flex-direction: column;
   min-height: 400px;
   padding-left: 170px;
-  background-image: url("../../assets/img/cards.png")
+  background-image: url("../../assets/img/cards.png");
 }
 
 .promo__title {
