--- a/src/components/promo/promo.scss
+++ b/src/components/promo/promo.scss
@@ -23,7 +23,7 @@
       url("../img/cards.png"),
       linear-gradient(183.47deg, rgba(56, 65, 255, 0) 66.3%, #3841FF 97.14%),
       linear-gradient(183.47deg, rgba(56, 65, 255, 0) 27.26%, #3841FF 97.14%),
-      linear-gradient(0deg, $royalblue 0%, $royalblue 100%);
+      linear-gradient(0deg, $royalblue, $royalblue);
   background-repeat: no-repeat;
   background-size:
       auto,
