--- a/src/components/converter-form/converter-form.scss
+++ b/src/components/converter-form/converter-form.scss
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 60px;
+  padding-bottom: 100px;
 }
 
 .converter-form__title {
@@ -20,8 +21,4 @@
 
   margin: 0;
   margin-bottom: 70px;
-}
-
-.converter__form {
-  margin-bottom: 100px;
 }
