--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,7 +10,7 @@
 
 .header__container {
   @include container;
-  
+
   display: flex;
   align-items: baseline;
   padding-top: 27px;
@@ -22,4 +22,5 @@
 
 .header__user-block {
   margin-left: auto;
+  margin-right: 1px;
 }
